--- a/index.html
+++ b/index.html
@@ -57,72 +57,13 @@ padding:10px 0 ;
 101 Great Goals
 
 </p>
-<img width="100%"
+<img width="100%" usemap="#map1"
 src="https://media.gemini.media/img/yallakora/Normal//2017/3/30/korayalla2017_3_30_16_53.jpg"
  alt ="logo">
- 
- <table border="1" width="100%">
-  <tr>
-   <th> </th>
-   <th>monday</th>
-   <th>tuesday </th>
-   <th>wedenzday </th>
-   <th>thursday </th>
-   <th>friday </th>
-  </tr>
-  <tr>
-  <td>1 : pm </td>
-  <td style="background-color:#81FF00"
-  rowspan="2" >HTML</td>
-  <td > </td>
-  <td style="background-color:#FF719A"
-  rowspan="2">HTML </td>
-  <td style="background-color:#0800FF"
-  rowspan="8"> html hour</td>
-  <td style="background-color:#00DDFF"
-  rowspan="2"> HTML</td>
-  </tr> 
-  <tr>
-  <td> 2 :pm .</td>
-  <td rowspan="2">dept meeting</td>
-  </tr>
-  
-  <tr>
-   <td> 3 :pm .</td>
-  <td style="background-color:#FF6000"
-  rowspan="3">CSS</td>
-   <td style="background-color:#81FF00"
-   rowspan="3">CSS</td> 
-    <td rowspan="3">CSS</td>
-  </tr>
-  
-  <tr>
-   <td> 4 :pm </td>
-   <td> </td>
-  </tr>
-  
-  <tr>
-   <td> 5 :pm </td>
-   <td style="background-color:#00FF7D"
-   rowspan="3">EC meeting</td>
-  </tr>
-  
-  <tr>
-   <td> 6 :pm </td>
-    <td rowspan="3">csc205</td>
-     <td rowspan="3">csc205</td>
-      <td rowspan="3">csc205</td>
-  </tr>
-  
-  <tr>
-   <td>7 pm</td>
-   </tr>
-   
-   <tr>
-    <td>8 pm</td>
-    <td> </td>
-   </tr>
-  </table>
+ <map name="map1">
+   <area shape="rect" cord="0,0,90,90" href="">
+   </map>
+
 <p> This website updates regularly with football news and opinion pieces. The layout is simple with each story linked to a photograph, making a visually appealing website design. Another interesting feature of this website is the live streaming feature. Although this may not be feasible with your website, having video and photographic content can help more people engage with your ideas and news. 
 
 The Anfield Wrap
@@ -131,11 +72,8 @@ The Anfield Wrap
 
 </div>
 
-<div class="footer background:#333;
-color:#fff;
-text-align:center;
-padding:10px 0 ;>
-<a href="untitled.html" > »page 2 </a>
+<div class="footer">
+<a href="file:///C:/Users/Zinab/Desktop/page2.html" > »page 2 </a>
 <p>copy right & copy : 2021 ALL RIGHT reserved 
 </p>
 
