--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="describtion" content="football champion">
 <title> YallaKora </title>
 <style>
-body{padding:0;margin:0;font-family:fantasy.}
+body{padding:0;margin:0;font-family:fantasy}
 .header{
 padding:20px 0;
 text-align:center;
@@ -57,6 +57,68 @@ padding:10px 0 ;
 101 Great Goals
 
 </p>
+ <table border="1" width="100%">
+  <tr>
+   <th> </th>
+   <th>monday</th>
+   <th>tuesday </th>
+   <th>wedenzday </th>
+   <th>thursday </th>
+   <th>friday </th>
+  </tr>
+  <tr>
+  <td>1 : pm </td>
+  <td style="background-color:#81FF00"
+  rowspan="2" >HTML</td>
+  <td > </td>
+  <td style="background-color:#FF719A"
+  rowspan="2">HTML </td>
+  <td style="background-color:#0800FF"
+  rowspan="8"> html hour</td>
+  <td style="background-color:#00DDFF"
+  rowspan="2"> HTML</td>
+  </tr> 
+  <tr>
+  <td> 2 :pm .</td>
+  <td rowspan="2">dept meeting</td>
+  </tr>
+  
+  <tr>
+   <td> 3 :pm .</td>
+  <td style="background-color:#FF6000"
+  rowspan="3">CSS</td>
+   <td style="background-color:#81FF00"
+   rowspan="3">CSS</td> 
+    <td rowspan="3">CSS</td>
+  </tr>
+  
+  <tr>
+   <td> 4 :pm </td>
+   <td> </td>
+  </tr>
+  
+  <tr>
+   <td> 5 :pm </td>
+   <td style="background-color:#00FF7D"
+   rowspan="3">EC meeting</td>
+  </tr>
+  
+  <tr>
+   <td> 6 :pm </td>
+    <td rowspan="3">csc205</td>
+     <td rowspan="3">csc205</td>
+      <td rowspan="3">csc205</td>
+  </tr>
+  
+  <tr>
+   <td>7 pm</td>
+   </tr>
+   
+   <tr>
+    <td>8 pm</td>
+    <td> </td>
+   </tr>
+  </table>
 <img width="100%" usemap="#map1"
 src="https://media.gemini.media/img/yallakora/Normal//2017/3/30/korayalla2017_3_30_16_53.jpg"
  alt ="logo">
