--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="describtion" content="football champion">
 <title> YallaKora </title>
 <style>
-body{padding:0;margin:0;font-family:fantasy}
+body{padding:0;margin:0;font-family:fantasy.}
 .header{
 padding:20px 0;
 text-align:center;
@@ -57,6 +57,10 @@ padding:10px 0 ;
 101 Great Goals
 
 </p>
+<img width="100%"
+src="https://media.gemini.media/img/yallakora/Normal//2017/3/30/korayalla2017_3_30_16_53.jpg"
+ alt ="logo">
+ 
  <table border="1" width="100%">
   <tr>
    <th> </th>
@@ -119,13 +123,6 @@ padding:10px 0 ;
     <td> </td>
    </tr>
   </table>
-<img width="100%" usemap="#map1"
-src="https://media.gemini.media/img/yallakora/Normal//2017/3/30/korayalla2017_3_30_16_53.jpg"
- alt ="logo">
- <map name="map1">
-   <area shape="rect" cord="0,0,90,90" href="">
-   </map>
-
 <p> This website updates regularly with football news and opinion pieces. The layout is simple with each story linked to a photograph, making a visually appealing website design. Another interesting feature of this website is the live streaming feature. Although this may not be feasible with your website, having video and photographic content can help more people engage with your ideas and news. 
 
 The Anfield Wrap
@@ -134,8 +131,11 @@ The Anfield Wrap
 
 </div>
 
-<div class="footer">
-<a href="file:///C:/Users/Zinab/Desktop/page2.html" > »page 2 </a>
+<div class="footer background:#333;
+color:#fff;
+text-align:center;
+padding:10px 0 ;>
+<a href="untitled.html" > »page 2 </a>
 <p>copy right & copy : 2021 ALL RIGHT reserved 
 </p>
 
